# meow

./: .gitignore  CLAUDE.md  README.md  http_proxy.py  test-e2e-http.sh  test-e2e.sh
.github/workflows/: e2e.yml  lint.yml  release.yml  tests.yml
buildSrc/src/main/kotlin/: Helpers.kt
core/: build.gradle.kts
core/src/main/java/io/github/madeye/meow/aidl/: MihomoConnection.kt  TrafficStats.kt
core/src/main/java/io/github/madeye/meow/bg/: MihomoInstance.kt  ServiceNotification.kt  VpnService.kt
core/src/main/java/io/github/madeye/meow/core/: MihomoCore.kt
core/src/main/java/io/github/madeye/meow/preference/: DataStore.kt
core/src/main/java/io/github/madeye/meow/subscription/: SubscriptionService.kt
core/src/main/rust/meow-proxy-patched/: Cargo.toml
core/src/main/rust/meow-proxy-patched/src/: direct.rs  http_adapter.rs  lib.rs  shadowsocks_adapter.rs  socks5_adapter.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
core/src/main/rust/mihomo-android-ffi/: Cargo.toml
core/src/main/rust/mihomo-android-ffi/src/: china_dns.rs  diagnostics.rs  dns_client.rs  dns_factory.rs  doh_cache.rs  doh_client.rs  engine.rs  lib.rs  protect.rs  tun2socks.rs
core/src/main/rust/mihomo-proxy-patched/: Cargo.toml
core/src/main/rust/mihomo-proxy-patched/src/: connect.rs  direct.rs  health.rs  http_adapter.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  socks5_adapter.rs  stream_conn.rs  transport_chain.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
core/src/main/rust/mihomo-proxy-patched/src/group/: fallback.rs  load_balance.rs  mod.rs  relay.rs  selector.rs  urltest.rs
core/src/main/rust/mihomo-proxy-patched/src/vless/: conn.rs  header.rs  vision.rs
fastlane/: Fastfile  README.md
fastlane/metadata/android/en-US/changelogs/: 1000013.txt  1000018.txt  1000019.txt  1000021.txt  1000022.txt  1000023.txt
flutter_module/: pubspec.yaml
flutter_module/lib/: app.dart
flutter_module/lib/l10n/: strings.dart
flutter_module/lib/models/: connection.dart  log_entry.dart  profile.dart  proxy.dart  proxy_group.dart  proxy_provider.dart  rule.dart  runtime_config.dart  traffic.dart
flutter_module/lib/screens/: connections_screen.dart  home_screen.dart  rules_screen.dart  settings_screen.dart  subscriptions_screen.dart  traffic_screen.dart  yaml_editor_screen.dart
flutter_module/lib/services/: mihomo_api.dart  vpn_channel.dart
flutter_module/lib/theme/: app_theme.dart
flutter_module/lib/widgets/: mode_card.dart  proxy_groups_section.dart
flutter_module/test/: subscription_clipboard_test.dart  vpn_channel_yaml_test.dart
mobile/src/main/java/io/github/madeye/meow/: MainActivity.kt
mobile/src/main/res/values/: strings.xml
