[package]
name = "meow-proxy"
version = "0.6.0"
edition = "2021"
rust-version = "1.88"

[features]
default = ["ss", "trojan", "vless", "vless-vision"]
ss = ["dep:shadowsocks"]
trojan = []
vless = []
vless-vision = ["vless"]
anytls = ["dep:anytls-rs"]
ech-tls-tunnel = ["ss", "meow-transport/ech"]
# Declared so upstream's `#[cfg(feature = "hysteria2")]` blocks don't trip
# "unexpected cfg value" warnings. Not wired to `dep:quinn`: upstream marks
# the implementation as an incomplete tracer-bullet (no working H3 auth /
# data framing), so enabling it would only add ~1 MB of quinn for no
# functional gain. Revisit once upstream lands the data plane.
hysteria2 = []

[dependencies]
meow-common = { git = "https://github.com/madeye/meow-rs.git", rev = "0a7d702eba1c05dbedc391a776ce99121be8cec3" }
meow-dns = { git = "https://github.com/madeye/meow-rs.git", rev = "0a7d702eba1c05dbedc391a776ce99121be8cec3" }
meow-transport = { git = "https://github.com/madeye/meow-rs.git", rev = "0a7d702eba1c05dbedc391a776ce99121be8cec3" }
tokio = { version = "1", features = ["full"] }
shadowsocks = { version = "1.21", features = ["aead-cipher-2022", "stream-cipher"], optional = true }
anytls-rs = { version = "0.5", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
bytes = "1"
rand = "0.9"
base64 = "0.22"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
parking_lot = "0.12"
regex = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
http = "1"
