[package]
name = "mihomo-android-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"  # JNI requires unsafe

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"
# False positive on stable: thread_local! initializer is already wrapped in
# `const { ... }`, but clippy's pattern-matcher doesn't see through the
# macro expansion on this version.
missing_const_for_thread_local = "allow"

[dependencies]
# Embedded mihomo-rust engine. Pinned to v0.7.4 (matches meow-ios).
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.7.4" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.7.4" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.7.4" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.7.4" }
mihomo-common = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.7.4" }
# Local fork of mihomo-proxy with the Android `set_pre_connect_hook` patch.
mihomo-proxy = { path = "../mihomo-proxy-patched" }

# Explicit pin (transitive through mihomo-tunnel; surfaced here because
# engine startup builds DashMap<String, Arc<ProxyProvider>> for ApiServer::new
# with the same concrete types mihomo-tunnel uses internally).
dashmap = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
futures = "0.3"

# Logging
tracing = { version = "0.1", features = ["log-always"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
android_logger = "0.14"

# YAML / serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# rustls is still needed by `start_engine_async` for the embedded mihomo
# engine's outbound TLS (Trojan, etc.) — installs the ring crypto provider.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Low-level
libc = "0.2"
anyhow = "1"
nix = { version = "0.29", features = ["fs"] }
socket2 = "0.5"

# tun2socks
netstack-smoltcp = "0.2"

# Persistent DNS answer cache (single-writer KV at $HOME_DIR/doh-cache.redb;
# filename retained for backward compatibility).
redb = "2"

# GeoIP CN check for the trust-china-dns split-horizon path.
maxminddb = "0.27"
ipnetwork = "0.21"
ipnet = "2"
iprange = "0.6"

# JNI bridge
jni = "0.21"

# Global allocator. mimalloc returns freed pages to the OS more aggressively
# than the platform malloc and avoids fragmentation under the VPN service's
# tight memory budget.
mimalloc = { version = "0.1", default-features = false }

[patch."https://github.com/madeye/mihomo-rust.git"]
mihomo-proxy = { path = "../mihomo-proxy-patched" }
