[package]
name = "mihomo-android-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"  # JNI requires unsafe

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"
# False positive on stable: thread_local! initializer is already wrapped in
# `const { ... }`, but clippy's pattern-matcher doesn't see through the
# macro expansion on this version.
missing_const_for_thread_local = "allow"

[dependencies]
meow-tunnel = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0" }
meow-config = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0", features = ["anytls", "ech-tls-tunnel"] }
meow-dns = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0" }
meow-api = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0" }
meow-common = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0" }
meow-transport = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0", features = ["tls", "ws", "ech", "grpc", "h2", "httpupgrade"] }
meow-proxy = { git = "https://github.com/madeye/meow-rs.git", tag = "v0.13.0", features = ["anytls", "ech-tls-tunnel"] }

# Explicit pin (transitive through meow-tunnel; surfaced here because
# engine startup builds DashMap<String, Arc<ProxyProvider>> for ApiServer::new
# with the same concrete types meow-tunnel uses internally).
dashmap = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
futures = "0.3"

# Logging
tracing = { version = "0.1", features = ["log-always"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
android_logger = "0.14"

# YAML / serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# rustls is still needed by `start_engine_async` for the embedded mihomo
# engine's outbound TLS (Trojan, etc.) — installs the ring crypto provider.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Low-level
libc = "0.2"
anyhow = "1"
nix = { version = "0.29", features = ["fs"] }
socket2 = "0.5"

# tun2socks
lwip = "0.3"

# Persistent DNS answer cache (single-writer KV at $HOME_DIR/doh-cache.redb;
# filename retained for backward compatibility).
redb = "2"

# GeoIP CN check for the trust-china-dns split-horizon path.
maxminddb = "0.27"
ipnetwork = "0.21"
ipnet = "2"
iprange = "0.6"

# JNI bridge
jni = "0.21"

# Global allocator. mimalloc returns freed pages to the OS more aggressively
# than the platform malloc and avoids fragmentation under the VPN service's
# tight memory budget.
mimalloc = { version = "0.1", default-features = false }

# Patched lwip: upstream 0.3.15's `Stream::poll_next` impls
# (TcpListenerImpl / NetStackImpl / UdpSocket) mutate shared state
# (queue/rx/waker) WITHOUT holding LWIP_MUTEX, while the lwIP callbacks
# (tcp_accept_cb / output / udp_recv_cb) mutate the same state under the
# lock. On a multi-worker runtime this can race: a concurrent VecDeque realloc
# in TcpListenerImpl::queue can corrupt Box<TcpStreamImpl> ownership and hand
# out a stream whose mpsc Receiver is freed -> SIGSEGV (use-after-free) in
# TcpStreamImpl::poll_read under sustained TCP-flow churn. The fork acquires
# LWIP_MUTEX at the top of each poll_next.
#
# rev 5adf5e24 adds two idle-blackout fixes on top:
#   1. NetStackImpl::poll_flush returned Poll::Pending without a waker on
#      pbuf_alloc failure, permanently deadlocking the single task that
#      drives both stack directions. Now drops the frame (IP is lossy).
#   2. TcpStreamImpl::drop leaked TX-half-closed pcbs in FIN_WAIT_1/2
#      forever (TF_RXCLOSED unset -> lwIP slowtmr never reaps them); now
#      tcp_close()s so the 20 s FIN_WAIT_2 timeout applies.
#
# Matches ../meow-ios/core/rust/meow-ios-ffi. Drop this patch once the fixes
# land in an upstream lwip release.
[patch.crates-io]
lwip = { git = "https://github.com/madeye/lwip", rev = "dab00c540cf0606fee14ddd99cfa6ec79d33681d" }
